--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-processhtml": "^0.3.13",
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.5.0",
     "react": "^15.0.1",
