--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-processhtml": "^0.3.13",
+    "grunt-shell": "^1.3.0",
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.5.0",
     "react": "^15.0.1",
