--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "classnames": "^2.2.3",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-processhtml": "^0.3.13",
+    "grunt-sass": "^1.1.0",
     "grunt-shell": "^1.3.0",
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.5.0",
