--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-webpack": "^1.0.11",
     "load-grunt-tasks": "^3.5.0",
     "react": "^15.0.1",
+    "react-addons-css-transition-group": "^15.0.1",
     "react-dom": "^15.0.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
